Fixed issues on mobile create project margins. Fixed task view margins

--- a/src/views/components/google-translate/google-translate.scss
+++ b/src/views/components/google-translate/google-translate.scss
@@ -5,7 +5,7 @@
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    margin: 0 0 0 20px;
+    margin: 0 0 0 10px;
     line-height: 1.2em;
   }
   .goog-te-gadget-icon {
