--- a/src/views/components/header/header.scss
+++ b/src/views/components/header/header.scss
@@ -5,7 +5,7 @@
   padding: 0;
   height: 50px;
   overflow: hidden;
-  line-height: 40px;
+  line-height: 44px;
 
   a {
     &:hover {
@@ -50,7 +50,7 @@
   }
 
   .lang-select {
-    margin-left: 1.5em;
+    margin-left: 0.5em;
   }
 
   .lang-right {
@@ -67,7 +67,7 @@
 }
 
 .header-title {
-  margin: 0 0 0 1em;
+  margin: 0 0 0 0.5em;
   display: flex;
   align-items: center;
 
