--- a/src/views/components/task-list/task-list.scss
+++ b/src/views/components/task-list/task-list.scss
@@ -41,7 +41,7 @@
 }
 
 .task-list {
-  max-height: 25em;
+  max-height: 27.5em;
   //height: 500px;
   overflow-y: auto;
   border-radius: 3px 3px 0 0;
