--- a/src/views/pages/tasks/tasks-page.scss
+++ b/src/views/pages/tasks/tasks-page.scss
@@ -16,6 +16,7 @@
 .task-list-wrapper {
   z-index: 2;
   max-width: 50%;
+  min-width: 50%;
   flex: 5500 1 605px;
   -webkit-box-flex: 5500;
   -ms-flex: 5500 1 605px;
